Poprawione wyznaczanie mapy